--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triple-m",
-  "version": "0.1.0",
+  "version": "0.1.0r1",
   "description": "A minimal markup language that transpiles to html",
   "main": "lib/index.js",
   "directories": {
@@ -11,10 +11,14 @@
     "start": "node bin/mmmc",
     "build": "tsc -b"
   },
-  "files": ["bin", "lib", "README.md"],
+  "bugs": {
+    "url": "https://github.com/Henderythmix/Triple-M/issues"
+  },
+  "files": ["bin", "lib", "README.md", "LICENSE"],
   "keywords": ["html", "cli", "compiler", "front-end", "language", "markup"],
   "author": "Henderythmix",
-  "license": "ISC",
+  "license": "Apache-2.0",
+  "repository": {"url": "https://github.com/Henderythmix/Triple-M", "type": "git"},
   "devDependencies": {
     "@types/node": "^18.16.1",
     "typescript": "^5.0.4"
