--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triple-m",
-  "version": "0.1.0r1",
+  "version": "0.1.1",
   "description": "A minimal markup language that transpiles to html",
   "main": "lib/index.js",
   "directories": {
